notebook to join naafs and lcas

--- a/notebooks/UniPept-LCA/T0-322-trypsin-PeaksDB-UniPept_LCA.ipynb
+++ b/notebooks/UniPept-LCA/T0-322-trypsin-PeaksDB-UniPept_LCA.ipynb
@@ -845,6 +845,106 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now I want to read in the file containing the stripped peptides with NAAF values\n",
+    "####  - NAAF stands for 'noramlized area abunace factor'\n",
+    "\n",
+    "### I want to join the dataframes if they share an index (stripped peptide with equated leucine and isoleucines)\n",
+    "#### - That means I'll reindex the processed peptide file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>stripped_IL</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>NAAF_num.</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LPQVEGTGGDVQPSQDLVR</td>\n",
+       "      <td>134000000.0</td>\n",
+       "      <td>7.052632e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>VLGQNEAVDAVSNALR</td>\n",
+       "      <td>142000000.0</td>\n",
+       "      <td>8.875000e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ALDLLDEAASSLR</td>\n",
+       "      <td>171000000.0</td>\n",
+       "      <td>1.315385e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>VTDAELAEVLAR</td>\n",
+       "      <td>192000000.0</td>\n",
+       "      <td>1.600000e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>STEFDNLLLVGPLAGK</td>\n",
+       "      <td>78300.0</td>\n",
+       "      <td>4.893750e+03</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           stripped_IL         Area     NAAF_num.\n",
+       "0  LPQVEGTGGDVQPSQDLVR  134000000.0  7.052632e+06\n",
+       "1     VLGQNEAVDAVSNALR  142000000.0  8.875000e+06\n",
+       "2        ALDLLDEAASSLR  171000000.0  1.315385e+07\n",
+       "3         VTDAELAEVLAR  192000000.0  1.600000e+07\n",
+       "4     STEFDNLLLVGPLAGK      78300.0  4.893750e+03"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tryp_322_DB_NAAF = pd.read_csv(\"/home/millieginty/Documents/git-repos/rot-mayer/data/processed/I-L_NAAFs/T0_322_trypsin_DB_peptides.csv\")\n",
+    "\n",
+    "tryp_322_DB_NAAF.set_index('stripped_IL')\n",
+    "tryp_322_DB_NAAF = tryp_322_DB_NAAF.loc[:, ~tryp_322_DB_NAAF.columns.str.contains('^Unnamed')]\n",
+    "\n",
+    "tryp_322_DB_NAAF.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
