325 db naaf lca done

--- a/notebooks/PeaksDB/322_T0_trypsin_PeaksDB.ipynb
+++ b/notebooks/PeaksDB/322_T0_trypsin_PeaksDB.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -151,11 +151,6 @@
        "      <th>Fraction</th>\n",
        "      <th>Scan</th>\n",
        "      <th>Source_File</th>\n",
-       "      <th>#Spec</th>\n",
-       "      <th>#Spec</th>\n",
-       "      <th>Accession</th>\n",
-       "      <th>PTM</th>\n",
-       "      <th>AScore</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -172,11 +167,6 @@
        "      <td>4</td>\n",
        "      <td>15770</td>\n",
        "      <td>20210114_Weissrot_322_T0_trypsin_EThcD_120min_...</td>\n",
-       "      <td>59</td>\n",
-       "      <td>59</td>\n",
-       "      <td>gi|54036848</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -191,11 +181,6 @@
        "      <td>3</td>\n",
        "      <td>18509</td>\n",
        "      <td>20210113_Weissrot_322_T0_trypsin_EThcD_120min_...</td>\n",
-       "      <td>40</td>\n",
-       "      <td>40</td>\n",
-       "      <td>gi|54036848</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -210,11 +195,6 @@
        "      <td>3</td>\n",
        "      <td>22017</td>\n",
        "      <td>20210113_Weissrot_322_T0_trypsin_EThcD_120min_...</td>\n",
-       "      <td>34</td>\n",
-       "      <td>34</td>\n",
-       "      <td>gi|54036848</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -229,11 +209,6 @@
        "      <td>3</td>\n",
        "      <td>19961</td>\n",
        "      <td>20210113_Weissrot_322_T0_trypsin_EThcD_120min_...</td>\n",
-       "      <td>30</td>\n",
-       "      <td>30</td>\n",
-       "      <td>gi|54036848</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -248,11 +223,6 @@
        "      <td>1</td>\n",
        "      <td>34719</td>\n",
        "      <td>20210112_Weissrot_322_T0_trypsin_DDA_120min_2u...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Thalassiosira_weissflogii_0171348692:tr|A0A089...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -273,22 +243,15 @@
        "3  192000000.0         3  19961   \n",
        "4      78300.0         1  34719   \n",
        "\n",
-       "                                         Source_File  #Spec  #Spec  \\\n",
-       "0  20210114_Weissrot_322_T0_trypsin_EThcD_120min_...     59     59   \n",
-       "1  20210113_Weissrot_322_T0_trypsin_EThcD_120min_...     40     40   \n",
-       "2  20210113_Weissrot_322_T0_trypsin_EThcD_120min_...     34     34   \n",
-       "3  20210113_Weissrot_322_T0_trypsin_EThcD_120min_...     30     30   \n",
-       "4  20210112_Weissrot_322_T0_trypsin_DDA_120min_2u...      1      1   \n",
-       "\n",
-       "                                           Accession  PTM AScore  \n",
-       "0                                        gi|54036848  NaN    NaN  \n",
-       "1                                        gi|54036848  NaN    NaN  \n",
-       "2                                        gi|54036848  NaN    NaN  \n",
-       "3                                        gi|54036848  NaN    NaN  \n",
-       "4  Thalassiosira_weissflogii_0171348692:tr|A0A089...  NaN    NaN  "
+       "                                         Source_File  \n",
+       "0  20210114_Weissrot_322_T0_trypsin_EThcD_120min_...  \n",
+       "1  20210113_Weissrot_322_T0_trypsin_EThcD_120min_...  \n",
+       "2  20210113_Weissrot_322_T0_trypsin_EThcD_120min_...  \n",
+       "3  20210113_Weissrot_322_T0_trypsin_EThcD_120min_...  \n",
+       "4  20210112_Weissrot_322_T0_trypsin_DDA_120min_2u...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,6 +272,13 @@
     "\n",
     "peaksdb322.columns = columns\n",
     "\n",
+    "#remmove # spec and accession columns because they mess parsing up\n",
+    "\n",
+    "del peaksdb322['#Spec']\n",
+    "del peaksdb322['Accession']\n",
+    "del peaksdb322['PTM']\n",
+    "del peaksdb322['AScore']\n",
+    "\n",
     "print(\"# redundant peaksdb peptides in combined dataframe\", len(peaksdbdup322))\n",
     "print(\"# nonredundant peaksdb peptides in combined dataframe\", len(peaksdb322))\n",
     "\n",
@@ -318,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {
     "scrolled": false
    },
@@ -490,7 +460,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 52 columns</p>\n",
+       "<p>5 rows × 47 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -501,12 +471,12 @@
        "3         VTDAEIAEVLAR   50.81  1285.6877      12  0.1  429.5699   97.73   \n",
        "4     STEFDNILIVGPIAGK   49.60  1672.9036      16  0.0  837.4590  110.83   \n",
        "\n",
-       "          Area  Fraction   Scan  ... n-deam  k-meth  r-meth q-pyro k-acet  \\\n",
-       "0  134000000.0         4  15770  ...      0       0       0      0      0   \n",
-       "1  142000000.0         3  18509  ...      0       0       0      0      0   \n",
-       "2  171000000.0         3  22017  ...      0       0       0      0      0   \n",
-       "3  192000000.0         3  19961  ...      0       0       0      0      0   \n",
-       "4      78300.0         1  34719  ...      0       0       0      0      0   \n",
+       "          Area  Fraction   Scan  ... n-deam  k-meth  r-meth  q-pyro  k-acet  \\\n",
+       "0  134000000.0         4  15770  ...      0       0       0       0       0   \n",
+       "1  142000000.0         3  18509  ...      0       0       0       0       0   \n",
+       "2  171000000.0         3  22017  ...      0       0       0       0       0   \n",
+       "3  192000000.0         3  19961  ...      0       0       0       0       0   \n",
+       "4      78300.0         1  34719  ...      0       0       0       0       0   \n",
        "\n",
        "      stripped_peptide  stripped_length     NAAF_num.  ptm-total  \\\n",
        "0  LPQVEGTGGDVQPSQDLVR               19  7.052632e+06          0   \n",
@@ -522,10 +492,10 @@
        "3         VTDAELAEVLAR  \n",
        "4     STEFDNLLLVGPLAGK  \n",
        "\n",
-       "[5 rows x 52 columns]"
+       "[5 rows x 47 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +695,7 @@
        "4     STEFDNLLLVGPLAGK      78300.0  4.893750e+03"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
