lengths of all peptides

--- a/notebooks/PeaksDN/332_T12_undigested_PeaksDN.ipynb
+++ b/notebooks/PeaksDN/332_T12_undigested_PeaksDN.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -75,14 +75,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# redundant Peaks peptides >80% ALC in combined dataframe: 2713\n"
+      "# redundant Peaks peptides >80% ALC in combined dataframe: 2713\n",
+      "8.06708440840398\n"
      ]
     },
     {
@@ -260,7 +261,7 @@
        "4  98 99 100 99 98 100 98 99 96 92              KDETTLVDGH  HCD  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,6 +272,9 @@
     "peaks332 = pd.read_csv(\"/home/millieginty/Documents/git-repos/rot-mayer/data/MED_Weissrot_Fusion_UWPR2021/MED_Weissrot_Fusion_332-T12nd-all_DENOVO_100/332-T12nd-all_DENOVO_100_DN.csv\")\n",
     "\n",
     "print(\"# redundant Peaks peptides >80% ALC in combined dataframe:\", len(peaks332))\n",
+    "\n",
+    "mean_len = peaks332['length'].mean()\n",
+    "print(mean_len)\n",
     "\n",
     "# look at the dataframe\n",
     "peaks332.head()"
