--- a/notebooks/in_silico_digest/in_silico_GO.ipynb
+++ b/notebooks/in_silico_digest/in_silico_GO.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Evaluating and visualizing gene ontology (GO) terms associated with algal and bacterial peptides in degradation experiment\n",
+    "### Evaluating and visualizing gene ontology (GO) terms associated with algal and bacterial proteins during degradation experiment\n",
     "\n",
-    "#### Beginning with: GO term abundances in spreadsheets\n",
+    "#### Beginning with: GO term abundances from UniPept LCA of tryptic peptides generated from an in silico digestion of identified algal proteins (many of which were found with non tryptic searches, so UniPept not feasible).\n",
     "\n",
     "#### Goal: heatmaps of algal and bacterial GO terms over the 4 timepoints"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,279 +25,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Day 0 endo.</th>\n",
-       "      <th>Day 2 endo.</th>\n",
-       "      <th>Day 5 endo.</th>\n",
-       "      <th>Day 12 endo.</th>\n",
-       "      <th>Day 0 exo.</th>\n",
-       "      <th>Day 2 exo.</th>\n",
-       "      <th>Day 5 exo.</th>\n",
-       "      <th>Day 12 exo.</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GO term</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>GO:0009538 photosystem I reaction center</th>\n",
-       "      <td>8.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GO:0009507 chloroplast</th>\n",
-       "      <td>46.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GO:0016021 integral component of membrane</th>\n",
-       "      <td>41.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GO:0009536 plastid</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GO:0005886 plasma membrane</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                           Day 0 endo.  Day 2 endo.  \\\n",
-       "GO term                                                               \n",
-       "GO:0009538 photosystem I reaction center           8.0          7.0   \n",
-       "GO:0009507 chloroplast                            46.0         19.0   \n",
-       "GO:0016021 integral component of membrane         41.0         14.0   \n",
-       "GO:0009536 plastid                                 NaN          NaN   \n",
-       "GO:0005886 plasma membrane                         NaN          1.0   \n",
-       "\n",
-       "                                           Day 5 endo.  Day 12 endo.  \\\n",
-       "GO term                                                                \n",
-       "GO:0009538 photosystem I reaction center           8.0           7.0   \n",
-       "GO:0009507 chloroplast                            34.0          30.0   \n",
-       "GO:0016021 integral component of membrane         28.0          24.0   \n",
-       "GO:0009536 plastid                                 NaN           1.0   \n",
-       "GO:0005886 plasma membrane                         NaN           NaN   \n",
-       "\n",
-       "                                           Day 0 exo.  Day 2 exo.  Day 5 exo.  \\\n",
-       "GO term                                                                         \n",
-       "GO:0009538 photosystem I reaction center          NaN         7.0         NaN   \n",
-       "GO:0009507 chloroplast                            3.0        35.0         NaN   \n",
-       "GO:0016021 integral component of membrane         2.0        19.0         NaN   \n",
-       "GO:0009536 plastid                                NaN         NaN         NaN   \n",
-       "GO:0005886 plasma membrane                        NaN         NaN         NaN   \n",
-       "\n",
-       "                                           Day 12 exo.  \n",
-       "GO term                                                 \n",
-       "GO:0009538 photosystem I reaction center           NaN  \n",
-       "GO:0009507 chloroplast                             NaN  \n",
-       "GO:0016021 integral component of membrane          NaN  \n",
-       "GO:0009536 plastid                                 NaN  \n",
-       "GO:0005886 plasma membrane                         NaN  "
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "322: 50\n",
+      "323: 76\n",
+      "324: 26\n",
+      "325: 16\n"
+     ]
     }
    ],
    "source": [
     "# read the data into pandas dataframes\n",
-    "diatom = pd.read_csv(\"/home/millieginty/Documents/git-repos/rot-mayer/analyses/unipept/GO-terms/diatom-GO-cc.csv\", index_col=0)\n",
+    "D0_TD = pd.read_csv(\"/home/millieginty/Documents/git-repos/rot-mayer/analyses/unipept/GO-terms/trypsin-dig-proteinIDs/322-DB-protein-diatom-cc.csv\")\n",
     "\n",
-    "diatom.head()\n",
+    "# concatenate GO-term and Name columns\n",
+    "D0_TD['GO term'] = D0_TD['GO-term'] + \" \" + D0_TD['Name']\n",
+    "del D0_TD['GO-term']\n",
+    "del D0_TD['Name']\n",
     "\n",
-    "# rename columns\n",
-    "names = ['Day 0 endo.', 'Day 2 endo.', 'Day 5 endo.', 'Day 12 endo.', \\\n",
-    "        'Day 0 exo.', 'Day 2 exo.', 'Day 5 exo.', 'Day 12 exo.']\n",
-    "diatom.columns = names\n",
+    "print('322:', len(D0_TD))\n",
     "\n",
-    "bacteria = pd.read_csv(\"/home/millieginty/Documents/git-repos/rot-mayer/analyses/unipept/GO-terms/bacteria-GO-cc.csv\", index_col=0)\n",
+    "# read the data into pandas dataframes\n",
+    "D2_TD = pd.read_csv(\"/home/millieginty/Documents/git-repos/rot-mayer/analyses/unipept/GO-terms/trypsin-dig-proteinIDs/323-DB-protein-diatom-cc.csv\")\n",
     "\n",
-    "#bacteria.columns = names\n",
+    "# concatenate GO-term and Name columns\n",
+    "D2_TD['GO term'] = D2_TD['GO-term'] + \" \" + D2_TD['Name']\n",
+    "del D2_TD['GO-term']\n",
+    "del D2_TD['Name']\n",
     "\n",
-    "diatom.head()"
+    "print('323:', len(D2_TD))\n",
+    "\n",
+    "# read the data into pandas dataframes\n",
+    "D5_TD = pd.read_csv(\"/home/millieginty/Documents/git-repos/rot-mayer/analyses/unipept/GO-terms/trypsin-dig-proteinIDs/324-DB-protein-diatom-cc.csv\")\n",
+    "\n",
+    "# concatenate GO-term and Name columns\n",
+    "D5_TD['GO term'] = D5_TD['GO-term'] + \" \" + D5_TD['Name']\n",
+    "del D5_TD['GO-term']\n",
+    "del D5_TD['Name']\n",
+    "\n",
+    "print('324:', len(D5_TD))\n",
+    "\n",
+    "# read the data into pandas dataframes\n",
+    "D12_TD = pd.read_csv(\"/home/millieginty/Documents/git-repos/rot-mayer/analyses/unipept/GO-terms/trypsin-dig-proteinIDs/325-DB-protein-diatom-cc.csv\")\n",
+    "\n",
+    "# concatenate GO-term and Name columns\n",
+    "D12_TD['GO term'] = D12_TD['GO-term'] + \" \" + D12_TD['Name']\n",
+    "del D12_TD['GO-term']\n",
+    "del D12_TD['Name']\n",
+    "\n",
+    "print('325:', len(D12_TD))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Day 0</th>\n",
-       "      <th>Day 2</th>\n",
-       "      <th>Day 5</th>\n",
-       "      <th>Day 12</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GO term</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>GO:0009538 photosystem I reaction center</th>\n",
-       "      <td>8.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>7.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GO:0009507 chloroplast</th>\n",
-       "      <td>46.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>30.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GO:0016021 integral component of membrane</th>\n",
-       "      <td>41.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>24.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GO:0009536 plastid</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GO:0005886 plasma membrane</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                           Day 0  Day 2  Day 5  Day 12\n",
-       "GO term                                                               \n",
-       "GO:0009538 photosystem I reaction center     8.0    2.0    8.0     7.0\n",
-       "GO:0009507 chloroplast                      46.0    2.0   34.0    30.0\n",
-       "GO:0016021 integral component of membrane   41.0    3.0   28.0    24.0\n",
-       "GO:0009536 plastid                           NaN    NaN    NaN     1.0\n",
-       "GO:0005886 plasma membrane                   NaN    1.0    NaN     NaN"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "columns overlap but no suffix specified: Index(['Peptides'], dtype='object')",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-4410d94627a2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# join the dataframes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mD0_TD\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mD2_TD\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'GO term'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mon\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'GO term'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mjoin\u001b[0;34m(self, other, on, how, lsuffix, rsuffix, sort)\u001b[0m\n\u001b[1;32m   7206\u001b[0m         \u001b[0;36m5\u001b[0m  \u001b[0mK5\u001b[0m  \u001b[0mA5\u001b[0m  \u001b[0mNaN\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7207\u001b[0m         \"\"\"\n\u001b[0;32m-> 7208\u001b[0;31m         return self._join_compat(\n\u001b[0m\u001b[1;32m   7209\u001b[0m             \u001b[0mother\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mon\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mon\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhow\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mhow\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlsuffix\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlsuffix\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrsuffix\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrsuffix\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msort\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7210\u001b[0m         )\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m_join_compat\u001b[0;34m(self, other, on, how, lsuffix, rsuffix, sort)\u001b[0m\n\u001b[1;32m   7222\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7223\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 7224\u001b[0;31m             return merge(\n\u001b[0m\u001b[1;32m   7225\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7226\u001b[0m                 \u001b[0mother\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/pandas/core/reshape/merge.py\u001b[0m in \u001b[0;36mmerge\u001b[0;34m(left, right, how, on, left_on, right_on, left_index, right_index, sort, suffixes, copy, indicator, validate)\u001b[0m\n\u001b[1;32m     86\u001b[0m         \u001b[0mvalidate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mvalidate\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m     )\n\u001b[0;32m---> 88\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mop\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_result\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     89\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/pandas/core/reshape/merge.py\u001b[0m in \u001b[0;36mget_result\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    646\u001b[0m         \u001b[0mlsuf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrsuf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msuffixes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    647\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 648\u001b[0;31m         llabels, rlabels = _items_overlap_with_suffix(\n\u001b[0m\u001b[1;32m    649\u001b[0m             \u001b[0mldata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlsuf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrsuf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    650\u001b[0m         )\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/pandas/core/reshape/merge.py\u001b[0m in \u001b[0;36m_items_overlap_with_suffix\u001b[0;34m(left, lsuffix, right, rsuffix)\u001b[0m\n\u001b[1;32m   2022\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2023\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mlsuffix\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mrsuffix\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2024\u001b[0;31m         raise ValueError(\n\u001b[0m\u001b[1;32m   2025\u001b[0m             \u001b[0;34m\"columns overlap but no suffix specified: \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2026\u001b[0m             \u001b[0;34m\"{rename}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrename\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mto_rename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: columns overlap but no suffix specified: Index(['Peptides'], dtype='object')"
+     ]
     }
    ],
    "source": [
-    "# read the data into pandas dataframes\n",
-    "diatom_endo = pd.read_csv(\"/home/millieginty/Documents/git-repos/rot-mayer/analyses/unipept/GO-terms/diatom-GO-cc-ENDO.csv\", index_col=0)\n",
-    "\n",
-    "diatom_exo = pd.read_csv(\"/home/millieginty/Documents/git-repos/rot-mayer/analyses/unipept/GO-terms/diatom-GO-cc-EXO.csv\", index_col=0)\n",
-    "\n",
-    "# rename columns\n",
-    "names = ['Day 0', 'Day 2', 'Day 5', 'Day 12']\n",
-    "\n",
-    "diatom_endo.columns = names\n",
-    "diatom_exo.columns = names\n",
-    "\n",
-    "diatom_endo.head()"
+    "# join the dataframes\n",
+    "D0_TD.join(D2_TD.set_index('GO term'), on='GO term')"
    ]
   },
   {
