--- a/notebooks/Trypsin-undigested-overlap.ipynb
+++ b/notebooks/Trypsin-undigested-overlap.ipynb
@@ -568,7 +568,163 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## GO term overlap"
+    "## Protein overlap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/millieginty/Documents/git-repos/rot-mayer/data/database-fastas\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd /home/millieginty/Documents/git-repos/rot-mayer/data/database-fastas/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mmetsp_uniprot_tw_combo.fasta  T0-322_329_shared.txt\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use awk to make the fasta in single file format rather than interleaved (multiple lines/sequence)\n",
+    "\n",
+    "\n",
+    "!awk '{if(NR==1) {print $0} else {if($0 ~ /^>/) {print \"\\n\"$0} else {printf $0}}}' mmetsp_uniprot_tw_combo.fasta > mmetsp_uniprot_tw_combo_singleline.fasta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mmetsp_uniprot_tw_combo.fasta             T0-322_329_shared.txt\r\n",
+      "mmetsp_uniprot_tw_combo_singleline.fasta\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!grep -x -F -A 1 -f 'T0-322_329_shared.txt' 'mmetsp_uniprot_tw_combo_singleline.fasta' >> output.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Couldn't figure it out in python, but [Galaxy](usegalaxy.org/)'s `Filter FASTA sequences by ID` tool work's perfectly, so I output the results from that in the VennDrawer output analyses subdirectory. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '-f'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-5d1a7e0c2bbf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0monelinefile\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'mmetsp_uniprot_tw_combo_singleline.fasta'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpartition\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'.tmp'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0monelinefile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0moutfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m         \u001b[0mline\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '-f'"
+     ]
+    }
+   ],
+   "source": [
+    "# A script for extracting certain sequences from within a FASTA file.\n",
+    " \n",
+    "# First, convert FASTA file into file with one line per sequence.\n",
+    "# Make sure the name of your FASTA file doesn't contain any dots\n",
+    "# besides the one before the extension!\n",
+    "\n",
+    "linenum = 0\n",
+    "onelinefile = 'mmetsp_uniprot_tw_combo_singleline.fasta' + sys.argv[1].partition('.')[0] + '.tmp'\n",
+    "with open(onelinefile, 'w') as outfile:\n",
+    "    for line in open(sys.argv[1], 'r'):\n",
+    "        line = line.strip()\n",
+    "        if len(line) > 0:\n",
+    "            if line[0] == '>':\n",
+    "                if linenum == 0:\n",
+    "                    outfile.write(line + '\\t')\n",
+    "                    linenum += 1\n",
+    "                else:\n",
+    "                    outfile.write('\\n' + line + '\\t')\n",
+    "            else:\n",
+    "                outfile.write(line)\n",
+    " \n",
+    "# Populate a dictionary using the 'allononeline' file\n",
+    "all_seqs = {}\n",
+    "with open(onelinefile, 'r') as allseqsfile:\n",
+    "    for line in allseqsfile:\n",
+    "        line = line.strip().split('\\t')\n",
+    "        all_seqs[line[0][1:]] = line[1]\n",
+    " \n",
+    "# Generate a set of the sequences you wish to retrieve\n",
+    "desired_seqs = set()\n",
+    "with open(sys.argv[2], 'r') as listfile:\n",
+    "    for line in listfile:\n",
+    "        desired_seqs.add(line.strip())\n",
+    " \n",
+    "# Find the overlap between the total sequences and the desired ones\n",
+    "all_seqs_names = set(all_seqs.keys())\n",
+    "toextract = all_seqs_names.intersection(desired_seqs)\n",
+    " \n",
+    "# Use 'toextract' set to generate desired file\n",
+    "with open('T0-322_329_shared.txt' + sys.argv[1], 'w') as extractfile:\n",
+    "    for name in toextract:\n",
+    "        extractfile.write('>' + name + '\\n' + all_seqs[name] + '\\n')\n",
+    " \n",
+    "os.remove(onelinefile)"
    ]
   },
   {
