rearranged protein overlap dir structure

--- a/notebooks/Trypsin-undigested-overlap.ipynb
+++ b/notebooks/Trypsin-undigested-overlap.ipynb
@@ -660,71 +660,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Couldn't figure it out in python, but [Galaxy](usegalaxy.org/)'s `Filter FASTA sequences by ID` tool work's perfectly, so I output the results from that in the VennDrawer output analyses subdirectory. "
+    "### Couldn't figure it out in python, but [Galaxy](usegalaxy.org/)'s `Filter FASTA on the headers` tool work's perfectly, so I output the results from that in the VennDrawer output analyses subdirectory. \n",
+    "\n",
+    "### The process:\n",
+    "\n",
+    "   1. Take the overlapping peptides from VennDrawer output in `rot-mayer/analyses/VennDrawer/Trypsin-vs-DN` and make a text file'.\n",
+    "     \n",
+    "   2. Load into Galaxy along with the MMETSP (Marine Microbial Eukaryotic Transcriptome Sequencing Project) and UniProt _T. weiss._ protein database in `rot-mayer/data/database-fastas` in single line format (see above).\n",
+    "     \n",
+    "   3. Use the `Filter FASTA on headers and/or sequences` tool to generate a fasta of just the overlapping IDs.\n",
+    "     \n",
+    "   4. Save the new fasta in `analyses/VennDrawer/Trypsin-vs-DN` sample subdirectory.\n",
+    "   5. Perform an in silico trypsin digest on the shared protein fastas using Protein Digestion Simulator.\n",
+    "   6. Input the tryptic peptides into UniPept for functional analysis with GO term outputs.\n",
+    "   7. Save GO term outputs in `analyses/VennDrawer/Trypsin-vs-DN` sample subdirectory."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '-f'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-5d1a7e0c2bbf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0monelinefile\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'mmetsp_uniprot_tw_combo_singleline.fasta'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpartition\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'.tmp'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0monelinefile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0moutfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margv\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m         \u001b[0mline\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '-f'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T0-322_329_shared_protein_peptide_diatom_GO.txt\r\n",
+      "T0-322_329_shared_protein_seqs_digested_Mass400to6000.txt\r\n",
+      "T0-322_329_shared_protein_seqs.fasta\r\n",
+      "T0-322_329_shared.txt\r\n",
+      "T0-DN+ND-DB-proteins.txt\r\n"
      ]
     }
    ],
    "source": [
-    "# A script for extracting certain sequences from within a FASTA file.\n",
-    " \n",
-    "# First, convert FASTA file into file with one line per sequence.\n",
-    "# Make sure the name of your FASTA file doesn't contain any dots\n",
-    "# besides the one before the extension!\n",
+    "# Ultimately we get all these files: shared proteins to shared GO terms\n",
     "\n",
-    "linenum = 0\n",
-    "onelinefile = 'mmetsp_uniprot_tw_combo_singleline.fasta' + sys.argv[1].partition('.')[0] + '.tmp'\n",
-    "with open(onelinefile, 'w') as outfile:\n",
-    "    for line in open(sys.argv[1], 'r'):\n",
-    "        line = line.strip()\n",
-    "        if len(line) > 0:\n",
-    "            if line[0] == '>':\n",
-    "                if linenum == 0:\n",
-    "                    outfile.write(line + '\\t')\n",
-    "                    linenum += 1\n",
-    "                else:\n",
-    "                    outfile.write('\\n' + line + '\\t')\n",
-    "            else:\n",
-    "                outfile.write(line)\n",
-    " \n",
-    "# Populate a dictionary using the 'allononeline' file\n",
-    "all_seqs = {}\n",
-    "with open(onelinefile, 'r') as allseqsfile:\n",
-    "    for line in allseqsfile:\n",
-    "        line = line.strip().split('\\t')\n",
-    "        all_seqs[line[0][1:]] = line[1]\n",
-    " \n",
-    "# Generate a set of the sequences you wish to retrieve\n",
-    "desired_seqs = set()\n",
-    "with open(sys.argv[2], 'r') as listfile:\n",
-    "    for line in listfile:\n",
-    "        desired_seqs.add(line.strip())\n",
-    " \n",
-    "# Find the overlap between the total sequences and the desired ones\n",
-    "all_seqs_names = set(all_seqs.keys())\n",
-    "toextract = all_seqs_names.intersection(desired_seqs)\n",
-    " \n",
-    "# Use 'toextract' set to generate desired file\n",
-    "with open('T0-322_329_shared.txt' + sys.argv[1], 'w') as extractfile:\n",
-    "    for name in toextract:\n",
-    "        extractfile.write('>' + name + '\\n' + all_seqs[name] + '\\n')\n",
-    " \n",
-    "os.remove(onelinefile)"
+    "!ls /home/millieginty/Documents/git-repos/rot-mayer/analyses/VennDrawer/Trypsin-vs-DN/T0-protein-overlap/"
    ]
   },
   {
