loaded data into bacterial GO term nb

--- a/notebooks/GO-terms/GO-terms-bacteria.ipynb
+++ b/notebooks/GO-terms/GO-terms-bacteria.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Evaluating and visualizing gene ontology (GO) terms associated bacterial peptides in degradation experiment\n",
+    "## Evaluating and visualizing gene ontology (GO) terms associated bacterial peptides in degradation experiment\n",
     "\n",
     "#### Beginning with: stripped bacterial peptides and GO term abundances in spreadsheets\n",
     "\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,12 +25,288 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## First, combining all bacterial peptides from all timepoints and treatments (trypsin digested and naturally digested) to get a hierarchy of all possible GO terms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T0-322-trypsin-lca-DB.csv   T12-325-trypsin-lca-DN.csv\r\n",
+      "T0-322-trypsin-lca-DN.csv   T2-323-trypsin-lca-DN.csv\r\n",
+      "T12-325-trypsin-lca-DB.csv  T5-324-trypsin-lca-DN.csv\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We want the stripped peptides of just bacterial LCA hits in UniPept.\n",
+    "# Navigate to where these LCA output are in csvs in git repo:\n",
+    "\n",
+    "!ls /home/millieginty/Documents/git-repos/rot-mayer/analyses/unipept/lca/cleaned/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lca</th>\n",
+       "      <th>superkingdom</th>\n",
+       "      <th>kingdom</th>\n",
+       "      <th>subkingdom</th>\n",
+       "      <th>superphylum</th>\n",
+       "      <th>phylum</th>\n",
+       "      <th>subphylum</th>\n",
+       "      <th>superclass</th>\n",
+       "      <th>class</th>\n",
+       "      <th>subclass</th>\n",
+       "      <th>...</th>\n",
+       "      <th>tribe</th>\n",
+       "      <th>subtribe</th>\n",
+       "      <th>genus</th>\n",
+       "      <th>subgenus</th>\n",
+       "      <th>species</th>\n",
+       "      <th>group</th>\n",
+       "      <th>species.1</th>\n",
+       "      <th>subgroup</th>\n",
+       "      <th>species.2</th>\n",
+       "      <th>subspecies</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>peptide</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>LPQVEGTGGDVQPSQDLVR</th>\n",
+       "      <td>root</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VLGQNEAVDAVSNALR</th>\n",
+       "      <td>root</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ALDLLDEAASSLR</th>\n",
+       "      <td>root</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VTDAELAEVLAR</th>\n",
+       "      <td>root</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>STEFDNLLLVGPLAGK</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 29 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      lca superkingdom kingdom subkingdom superphylum phylum  \\\n",
+       "peptide                                                                        \n",
+       "LPQVEGTGGDVQPSQDLVR  root          NaN     NaN        NaN         NaN    NaN   \n",
+       "VLGQNEAVDAVSNALR     root          NaN     NaN        NaN         NaN    NaN   \n",
+       "ALDLLDEAASSLR        root          NaN     NaN        NaN         NaN    NaN   \n",
+       "VTDAELAEVLAR         root          NaN     NaN        NaN         NaN    NaN   \n",
+       "STEFDNLLLVGPLAGK      NaN          NaN     NaN        NaN         NaN    NaN   \n",
+       "\n",
+       "                    subphylum superclass class subclass  ... tribe subtribe  \\\n",
+       "peptide                                                  ...                  \n",
+       "LPQVEGTGGDVQPSQDLVR       NaN        NaN   NaN      NaN  ...   NaN      NaN   \n",
+       "VLGQNEAVDAVSNALR          NaN        NaN   NaN      NaN  ...   NaN      NaN   \n",
+       "ALDLLDEAASSLR             NaN        NaN   NaN      NaN  ...   NaN      NaN   \n",
+       "VTDAELAEVLAR              NaN        NaN   NaN      NaN  ...   NaN      NaN   \n",
+       "STEFDNLLLVGPLAGK          NaN        NaN   NaN      NaN  ...   NaN      NaN   \n",
+       "\n",
+       "                    genus subgenus species group species.1 subgroup species.2  \\\n",
+       "peptide                                                                         \n",
+       "LPQVEGTGGDVQPSQDLVR   NaN      NaN     NaN   NaN       NaN      NaN       NaN   \n",
+       "VLGQNEAVDAVSNALR      NaN      NaN     NaN   NaN       NaN      NaN       NaN   \n",
+       "ALDLLDEAASSLR         NaN      NaN     NaN   NaN       NaN      NaN       NaN   \n",
+       "VTDAELAEVLAR          NaN      NaN     NaN   NaN       NaN      NaN       NaN   \n",
+       "STEFDNLLLVGPLAGK      NaN      NaN     NaN   NaN       NaN      NaN       NaN   \n",
+       "\n",
+       "                    subspecies  \n",
+       "peptide                         \n",
+       "LPQVEGTGGDVQPSQDLVR        NaN  \n",
+       "VLGQNEAVDAVSNALR           NaN  \n",
+       "ALDLLDEAASSLR              NaN  \n",
+       "VTDAELAEVLAR               NaN  \n",
+       "STEFDNLLLVGPLAGK           NaN  \n",
+       "\n",
+       "[5 rows x 29 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# read the data into pandas dataframes\n",
+    "T0_322_dig_DB = pd.read_csv(\"/home/millieginty/Documents/git-repos/rot-mayer/analyses/unipept/lca/cleaned/T0-322-trypsin-lca-DB.csv\", index_col=0)\n",
+    "\n",
+    "T0_322_dig_DB.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## First, combining all bacterial peptides fro"
+    "# Take just the bacterial peptides"
    ]
   }
  ],
