plotted the three interesting mods in new nb

--- a/notebooks/PTM-AA/PTM-AAs-combined_DB_DN.ipynb
+++ b/notebooks/PTM-AA/PTM-AAs-combined_DB_DN.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "'1.0.5'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -188,7 +188,7 @@
        "3       0.060431       0.144682  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,6 +227,10 @@
     "               'Arg. w/ oxid.', 'Tyr. w/ oxid.', 'Asn. w/ deam.', 'Lys. w/ meth.', \\\n",
     "               'Arg. w/ meth.', 'Glu. w/ pyro.', 'Lys. w/ acet.']].copy()\n",
     "\n",
+    "# Save the SUM_PTM for analysis of PTMs in different subcellular locations\n",
+    "\n",
+    "sum_ptm.to_csv(\"/home/millieginty/Documents/git-repos/rot-mayer/analyses/AA-composition/naaf_sum_ptms_digested.csv\")\n",
+    "\n",
     "# I think the 'overall modfied' is too biased by terminal residues to be meaningful\n",
     "#sum_ptm = tot[['sample', 'Cys. w/ carb.', 'Met. w/ oxid.', 'Asn. w/ deam.', 'Gln. w/ deam.', 'Lys. w/ hydr.', \\\n",
     "               #'Arg. w/ meth.', 'Overall modified']].copy()\n",
@@ -236,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -361,7 +365,7 @@
        "3       0.011080       0.125581  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
