--- a/notebooks/in_silico_digest/in_silico_GO.ipynb
+++ b/notebooks/in_silico_digest/in_silico_GO.ipynb
@@ -1309,20 +1309,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>GO term</th>\n",
+       "      <th>Chloroplast</th>\n",
+       "      <th>Cell membrane</th>\n",
+       "      <th>Mitochondria</th>\n",
+       "      <th>Endoplasmic</th>\n",
+       "      <th>Golgi</th>\n",
+       "      <th>Ribosome</th>\n",
+       "      <th>Nucleus</th>\n",
+       "      <th>Cytoplasm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Day 0 ND</th>\n",
+       "      <td>31.055901</td>\n",
+       "      <td>25.465839</td>\n",
+       "      <td>3.726708</td>\n",
+       "      <td>4.968944</td>\n",
+       "      <td>9.31677</td>\n",
+       "      <td>8.385093</td>\n",
+       "      <td>3.105590</td>\n",
+       "      <td>13.975155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Day 2 ND</th>\n",
+       "      <td>43.537415</td>\n",
+       "      <td>22.619048</td>\n",
+       "      <td>11.224490</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>6.972789</td>\n",
+       "      <td>2.721088</td>\n",
+       "      <td>12.925170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Day 5 ND</th>\n",
+       "      <td>66.037736</td>\n",
+       "      <td>27.044025</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6.918239</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Day 12 ND</th>\n",
+       "      <td>73.958333</td>\n",
+       "      <td>26.041667</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "GO term    Chloroplast  Cell membrane  Mitochondria  Endoplasmic    Golgi  \\\n",
+       "Day 0 ND     31.055901      25.465839      3.726708     4.968944  9.31677   \n",
+       "Day 2 ND     43.537415      22.619048     11.224490     0.000000  0.00000   \n",
+       "Day 5 ND     66.037736      27.044025      0.000000     0.000000  0.00000   \n",
+       "Day 12 ND    73.958333      26.041667      0.000000     0.000000  0.00000   \n",
+       "\n",
+       "GO term    Ribosome   Nucleus  Cytoplasm  \n",
+       "Day 0 ND   8.385093  3.105590  13.975155  \n",
+       "Day 2 ND   6.972789  2.721088  12.925170  \n",
+       "Day 5 ND   0.000000  0.000000   6.918239  \n",
+       "Day 12 ND  0.000000  0.000000   0.000000  "
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#transpose the silico digested diatom GO terms\n",
     "\n",
     "tdp_T = in_sil_td_p.transpose()\n",
     "\n",
-    "ndp_T = in_sil_nd_p.transpose()"
+    "ndp_T = in_sil_nd_p.transpose()\n",
+    "\n",
+    "ndp_T.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1376,12 +1477,12 @@
     "ax2.legend(handles[::-1], labels[::-1], bbox_to_anchor=(1,1), \\\n",
     "                 loc=\"upper left\", fontsize = 16, ncol = 1);\n",
     "\n",
-    "plt.savefig('/home/millieginty/Documents/git-repos/2017-etnp/data/thesis-talk/rot-GO-bar_percent.png', bbox_inches='tight', dpi=400)"
+    "#plt.savefig('/home/millieginty/Documents/git-repos/2017-etnp/data/thesis-talk/rot-GO-bar_percent.png', bbox_inches='tight', dpi=400)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
