configued figs for nsf post doc zoop prop

--- a/notebooks/PTM-AA/PTM-AAs-combined_DB_DN.ipynb
+++ b/notebooks/PTM-AA/PTM-AAs-combined_DB_DN.ipynb
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -995,7 +995,7 @@
     "axes[2,0].set_ylabel(\"% difference, Trypsin digested - naturally digested\", fontsize = 16, labelpad = 15)\n",
     "\n",
     "# Save figure in manuscript dir\n",
-    "plt.savefig('/home/millieginty/Documents/git-repos/rot-mayer/figures/manuscript-files/fig4-ptms.png', bbox_inches='tight', dpi=400)"
+    "plt.savefig('/home/millieginty/Documents/git-repos/rot-mayer/figures/manuscript-files/fig4-ptms.jpg', bbox_inches='tight', dpi=400)"
    ]
   },
   {
