--- a/notebooks/PTM-cellular-comp/PTM-CC-plots.ipynb
+++ b/notebooks/PTM-cellular-comp/PTM-CC-plots.ipynb
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
     "                 loc=\"upper left\", fontsize = 16, ncol = 1)\n",
     "axes[1,2].tick_params(axis='y', labelsize= 14);\n",
     "\n",
-    "#plt.savefig('/home/millieginty/Documents/git-repos/2017-etnp/data/thesis-talk/rot-GO-bar_percent.png', bbox_inches='tight', dpi=400)"
+    "plt.savefig('/home/millieginty/Documents/git-repos/rot-mayer/figures/manuscript-files/SFig1-PTM-CC.jpg', bbox_inches='tight', dpi=400)"
    ]
   },
   {
